can't use List.of